DTM-16 - home tab icon alignment fix

--- a/DTM-16-V5/DTM-16.scss
+++ b/DTM-16-V5/DTM-16.scss
@@ -7,7 +7,7 @@
 * @source https://github.com/XYZenix/XYZenixThemes/blob/master/DTM-16.theme.css
 */
 
-$themeVersion: "300";
+$themeVersion: "301";
 $themeDate: "Dec 20, 2022";
 
 @use "sass:color";
@@ -3302,6 +3302,9 @@ html.theme-light {
         +.content-1gYQeQ:hover {
           border-color: var(--background-secondary-alt);
         }
+      }
+      .iconContainer-21RCa3 {
+        margin-left: -4px;
       }
       .name-28HaxV {
         color: var(--header-primary);
